# THIRAMAI_GENESIS

./: .coveragerc  .dockerignore  .env.example  .env.production  .env.production.example  .env.staging.example  .gitattributes  .gitignore  CHANGELOG.md  DevServer.cmd  Dockerfile  README.md  Run-Server.bat  SECURITY_EXCEPTION.md  Start-Jarvis.ps1  THIRAMAI_V1_READY.txt  _full2.txt  alembic.ini  analysis_plan.json  app.py  asset_portal.py  brain.py  config.py  docker-compose.final.yml  docker-compose.goal-worker.yml  docker-compose.prod-slim.yml  docker-compose.production.yml  docker-compose.yml  executive_core.py  index.html  index_vault.py  junit_out.xml  kill_connections.py  locustfile.py  main.py  migrate_csv_to_db.py  migrate_vault.py  package-lock.json  pyproject.toml  pytest.ini  (+13 more)
.github/: DEPLOY_SETUP.md
agents/: __init__.py  compliance_manager.py  finance_manager.py  growth_manager.py  inventory_manager.py
alembic/: env.py
api/: __init__.py  billing_policy.py  dependencies.py  openapi_metadata.py
application/: __init__.py
brain_training/: __init__.py  robot_training_sim.py
cache/: __init__.py  keys.py  ttl.py
client/: package-lock.json  package.json
connectors/: __init__.py  protection.py  registry.py
core/: __init__.py  action_planner.py  agent_base.py  ai_input_sanitize.py  ai_model_router.py  ai_output_contract.py  ai_tool_arg_policy.py  ai_usage_limits.py  auth.py  autonomous_loop.py  autonomous_scheduler.py  autonomy_engine.py  background_agent.py  brain_output.py  business_decision_engine.py  calendar_engine.py  context_engine.py  database.py  (+65 more)
(+2335 files in other folders)
